# aceve.grid.benchmark

./: .gitignore  MERGE-PERFORMANCE-README.md  PROJECT_SUMMARY.md  README.md  aceve.grid.benchmark.sln  cursor_aggrid_maker.md  generate-json-sample.js  generate-json.js  generate-ndjson.js  index.html  merge-performance-data.js  package.json  performance-data-merged.json  run-continuous-tests.ps1  tsconfig.json
Ag-grid/: .gitignore  MCP-TROUBLESHOOTING.md  PLAYWRIGHT-MCP.md  README-WASM.md  README.md  asconfig.json  build-wasm.ps1  build-wasm.sh  index.html  package.json  styles.css  tsconfig.json
Ag-grid/assembly/: data-generator.ts
Ag-grid/src/: ag-grid-app.ts  columns.ts  types.ts
Ag-grid/wasm/: README.md  data-generator.d.ts  data-generator.js  (+3 more)
Ag-grid/wasm-data-generator/: .gitignore  Cargo.toml  README.md
Blazorise-grid/: App.razor  Blazorise-grid.csproj  PERFORMANCE.md  Program.cs  README.md  _Imports.razor
Canvas-grid/: README.md  index.html  styles.css  tsconfig.json
MudBlazor-grid/: App.razor  MudBlazor-grid.csproj  Program.cs  README.md  _Imports.razor
RevoGrid/: README.md  index.html  styles.css  tsconfig.json
Tabulator-grid/: index.html  styles.css
Wijmo-grid/: index.html  styles.css
ag-grid-speedup/: GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  README.md  index.html  package.json  vite.config.ts
ag-grid-speedup-js/: README.md  index.html  styles.css  tsconfig.json
playwright/: .gitignore  README.md  package.json  playwright.config.ts
results/: index.html
src/: data.d.ts  data.d.ts.map  data.js  data.js.map  data.ts
(+52 files in other folders)
